--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,11 +6,22 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "fastapi[all,standard]>=0.120.0",
-    "passlib[bcrypt]>=1.7.4",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
     "pyjwt>=2.10.1",
-    "python-dotenv>=1.2.1",
-    "python-jose[cryptography]>=3.5.0",
+    "sqlalchemy>=2.0.44",
+    "aiosqlite>=0.19.0", # Driver async pour SQLite (développement)
+    "asyncpg>=0.29.0", # Driver async pour PostgreSQL (production)
     "uvicorn>=0.38.0",
+    "pwdlib[argon2]>=0.3.0",
+]
+
+
+
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+    "pytest-cov>=7.0.0",
 ]
