--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,16 +8,16 @@ dependencies = [
     "fastapi[all,standard]>=0.120.0",
     "pydantic>=2.12.3",
     "pydantic-settings>=2.11.0",
-    "pyjwt>=2.10.1",
     "sqlalchemy>=2.0.44",
-    "aiosqlite>=0.19.0", # Driver async pour SQLite (développement)
     "asyncpg>=0.29.0", # Driver async pour PostgreSQL (production)
     "uvicorn>=0.38.0",
+    "python-socketio>=5.11.0",
+    "python-dotenv>=1.2.1",
+    "aiosqlite>=0.21.0",
+    "passlib[bcrypt]>=1.7.4",
+    "PyJWT>=2.9.0",
     "pwdlib[argon2]>=0.3.0",
 ]
-
-
-
 
 [dependency-groups]
 dev = [
