--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "passlib[bcrypt]>=1.7.4",
     "PyJWT>=2.9.0",
     "pwdlib[argon2]>=0.3.0",
+    "aiosmtplib>=5.0.0",
 ]
 
 [dependency-groups]
